<resources>
    <string name="app_name">WetherClockHelper</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="press_one_again_to_exist">再按一次退出</string>
    <string name="action_settings">Settings</string>
    <string name="weather">天气</string>
    <string name="note">记事本</string>
    <string name="setting">设置</string>
    <string name="help_and_feedback">帮助和反馈</string>
    <string name="news">资讯</string>
    <string name="other">其他</string>
</resources>
