<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@mipmap/ic_weather"
            android:title="@string/weather" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@mipmap/ic_add_note"
            android:title="@string/note" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@mipmap/ic_news"
            android:title="@string/news" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@mipmap/ic_setting"
                android:title="@string/setting" />
            <item
                android:id="@+id/nav_send"
                android:icon="@mipmap/ic_help"
                android:title="@string/help_and_feedback" />
        </menu>
    </item>

</menu>
